Prepare MYSQL Multiple

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ USER=DoniHMRs
 EXPIRED_TOKEN=3
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PORT=3306
+MYSQL_CON_LIMIT=20
