--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "node-match-path": "^0.6.3",
     "redis": "^3.1.2",
     "redis-connection-pool": "^1.7.4"
