--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 MYSQL_HOST=localhost
 MYSQL_USER=root
+MYSQL_PASSWORD=qwerty888
 MYSQL_PORT=3306
 MYSQL_CON_LIMIT=20
+MYSQL_DB_DEFAULT=orangehrm
