--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3021
 ENV=development
 SSL=true
-WHITELIST=172.16.*.*,livescore.local,undefined,localhost,127.0.0.1:8080
+WHITELIST=172.16.*.*,livescore.local,undefined,localhost,127.0.0.1:8080,orangehrm.local
 TOKEN=yang@buatTok3ny@DoniHmrST!mDevOps
 USER=DoniHMRs
 EXPIRED_TOKEN=3
