--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ MYSQL_PORT=3306
 MYSQL_CON_LIMIT=20
 MYSQL_DB_DEFAULT=orangehrm
 URL_SENTRY=orangehrm
+URL_API_HRM=https://orangehrm.local
+CLIENT_ID=001
+CLIENT_SECRET=qwerty888
+CLIENT_USERNAME=admin
+CLIENT_PASSWORD=M1r34cl3@
