--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "node-match-path": "^0.6.3",
