--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,6 @@
-PORT=3021
+PORT=3001
 ENV=development
-SSL=true
-WHITELIST=172.16.*.*,livescore.local,undefined,localhost,127.0.0.1:8080,orangehrm.local
-TOKEN=yang@buatTok3ny@DoniHmrST!mDevOps
-USER=DoniHMRs
-EXPIRED_TOKEN=3
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=qwerty888
-MYSQL_PORT=3306
-MYSQL_CON_LIMIT=20
-MYSQL_DB_DEFAULT=orangehrm
-URL_SENTRY=orangehrm
-URL_API_HRM=https://orangehrm.local
-CLIENT_ID=001
-CLIENT_SECRET=qwerty888
-CLIENT_USERNAME=admin
-CLIENT_PASSWORD=M1r34cl3@
-NAMA_KOTA=Jakarta
-TIMEZONE=Asia/Jakarta
+SSL=false
+WHITELIST=localhost:3000
+HOST_MONGO=localhost:27017
+DB_MONGO=travelio
