--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "APIBackendHRM",
+  "name": "demo_travelio_backend",
   "version": "1.0.0",
-  "description": "API Backend HRM",
+  "description": "Demo Travelio Backend",
   "main": "index.js",
+  "bin": {
+    "demo_travelio_backend": "bin/app.js"
+  },
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "test": "node index"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/donihmrs/Demo-Backend-Travelio.git"
   },
   "keywords": [
-    "middleware",
-    "livescore"
+    "demo",
+    "travelio",
+    "express",
+    "book"
   ],
   "author": "DoniHMRs",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/donihmrs/Demo-Backend-Travelio/issues"
+  },
+  "homepage": "https://github.com/donihmrs/Demo-Backend-Travelio#readme",
   "dependencies": {
-    "axios": "^0.21.4",
-    "bcrypt": "^5.0.1",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.3.0",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
-    "moment": "^2.29.3",
-    "moment-timezone": "^0.5.34",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
-    "node-match-path": "^0.6.3",
-    "redis": "^3.1.2",
-    "redis-connection-pool": "^1.7.4"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
+    "mongodb": "^4.6.0",
+    "node-match-path": "^0.6.3"
   }
 }
